# OpenCV2X

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddOppRun.cmake
scenarios/: CMakeLists.txt
scenarios/Mode4/: omnetpp.ini
scenarios/m50/: CMakeLists.txt  omnetpp.ini  regions_of_interest.xml
scenarios/m50-cv2x/: CMakeLists.txt  omnetpp.ini
scenarios/m50-cv2x/ITSC2020_CAV_impact/Motorway/: RSUs.xml
scenarios/m50-cv2x/ITSC2020_CAV_impact/Motorway/Simulations/Base/: M50_congested.sumo.cfg  M50_freeflow.sumo.cfg  M50_simulation_100ms_update.sumo.cfg  tmp25gljbj2
scenarios/m50-cv2x/ITSC2020_CAV_impact/Motorway/Simulations/re-worked/: M50_freeflow.sumo.cfg  M50_saturated.sumo.cfg  M50_test-cross.sumo.cfg  M50network.net.xml
scenarios/m50-cv2x/penetration-rates/: 100pc.xml  20pc.xml  2dot5pc.xml  40pc.xml  50pc.xml  70pc.xml  7pc.xml  90pc.xml
scenarios/m50-cv2x/service-configurations/: hln-wcw-ivs-dsl-rsu.xml  hln-wcw-obu-usecase.xml  hln-wcw-rsu-usecase.xml  ivs-hln-obu.xml  ivs-hln-rsu.xml  rww-lc-rsu-usecase.xml  speedAdvisory-obu.xml  speedAdvisory-rsu.xml
scenarios/m50/ITSC2020_CAV_impact/Motorway/: reduced-RSUs.xml
scenarios/m50/ITSC2020_CAV_impact/Motorway/Simulations/Base/: M50_detectors.poi.xml  M50_saturated.sumo.cfg  M50_test-cross-routes.rou.xml  M50_test-cross.sumo.cfg  M50_test-routes.rou.xml  M50_test.sumo.cfg  M50network.net.xml
scenarios/m50/ITSC2020_CAV_impact/Motorway/Simulations/re-worked/: M50_congested-test.sumo.cfg  M50_congested.sumo.cfg  M50_detectors.poi.xml  M50_routes.rou.xml  M50_test-cross-routes.rou.xml  M50_test-routes.rou.xml  vtypes.add.xml
scenarios/m50/penetration-rates/: 100pc.xml  20pc.xml  2dot5pc.xml  40pc.xml  70pc.xml  7pc.xml  90pc.xml
scenarios/m50/service-configurations/: den-only-obu.xml  ivs-sa-only-obu.xml  ivs-sa-only-rsu.xml
scenarios/test-services/: 100pc-penetration.xml  CMakeLists.txt  omnetpp.ini
scenarios/test-services-cv2x/: 100pc-penetration.xml  CMakeLists.txt  config_channel.xml  omnetpp.ini  sidelink_configuration.xml
scenarios/test-services-cv2x/service-configurations/: ca-rsu.xml
scenarios/test-services-cv2x/test-scenario/: RSUs.xml  cross.net.xml  cross.sumo.cfg  highway.net.xml
scenarios/test-services/service-configurations/: den-obu.xml  den-only-rsu.xml  den-rsu.xml  hln-wcw-ivs-dsl-obu.xml  no-den-use-case.xml  rww-lc-obu-usecase.xml
scenarios/test-services/test-scenario/: cross-RSUs.xml  cross.rou.xml  highway.rou.xml  highway.sumo.cfg
scenarios/test-services/test-scenario-2-vehicles/: RSUs.xml  highway.rou.xml
src/artery/: CMakeLists.txt
src/artery/application/: CaService.cc  CaService.h  CaService.ned  RsuCaService.cc  RsuCaService.h  RsuCaService.ned  RsuDenService.cc  RsuDenService.h  RsuDenService.ned  SpeedAdvisoryMessage.cc  SpeedAdvisoryMessage.h  SpeedAdvisoryReceiver.cc  SpeedAdvisoryReceiver.h  SpeedAdvisoryReceiver.ned  SpeedAdvisoryService.cc  SpeedAdvisoryService.h  SpeedAdvisoryService.ned
src/artery/envmod/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+46 files in other folders)
